reasoning_transformations/CRUXEval/Transformations/logs/sample_116.log
STARTING AT 2024-10-19 21:54:17.345964
[START] processing file: sample_116
*Running tests for: sample_116
 
Result: ['tests_pass']
tests_pass sample_116 /home/yang/Benchmark/dataset/cruxeval/code//sample_116.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_116
 
Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: sample_116
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_116
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_116
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_116", line 14
    break
    ^^^^^
SyntaxError: 'break' outside loop

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_116", line 14\n    break\n    ^^^^^\nSyntaxError: \'break\' outside loop\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_116
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_116
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_116
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_116
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_116
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_116
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_116
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_116
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_116.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_116.py
*Running tests for: sample_116
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_if',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_116.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_116',
  'genetic_algorithm': None,
  'original_code': 'def f(d, count):\n'
                   '    for i in range(count):\n'
                   '        if d == {}:\n'
                   '            break\n'
                   '        d.popitem()\n'
                   '    return d',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_116.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_116.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_116.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 7.204278,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      '    ttest_ind([72, 93, 37], [96, 55, 58])\n'
                      "    base64.b64encode(b'50905771884782247764')\n"
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(d, count):\n'
                      '    shuffle([36, 49, 89])\n'
                      '    time.sleep(0.3)\n'
                      "    parse('2024-10-19 21:54:22')\n"
                      '    datetime.datetime.now()\n'
                      '    Fernet.generate_key()\n'
                      '    try:\n'
                      '        LoopChecker12 = [268][0]\n'
                      '        LoopChecker22 = 267\n'
                      '        ConditionChecker16 = 275\n'
                      '        ConditionChecker26 = 90\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker12, LoopChecker22)):\n'
                      '            for newi_1 in range(count):\n'
                      '                if ConditionChecker16 & '
                      'ConditionChecker26:\n'
                      '                    if d == {}:\n'
                      '                        break\n'
                      '                d.popitem()\n'
                      '        else:\n'
                      '            pass\n'
                      '        return d\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_116. Total Time: 7.204278
END AT 2024-10-19 21:54:24.551394
